[package]
name = "pathfinder"
version = "0.1.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
repository = "https://github.com/OpenMatchmaking/pathfinder"
readme = "../README.md"
keywords = ["websocket", "rabbitmq", "proxy"]
license = "BSD-3-Clause"

[dependencies]
chrono = "0.4.0"
clap = "2.29"
config = "0.8"
fern = { version = "0.5", features = ["colored"] }
futures = "0.1"
json = "0.11"
jsonwebtoken = "4.0"
lapin-futures = "0.10.0"
lapin-futures-rustls = "0.10.0"
lapin-futures-tls-api = "0.6.0"
redis-async = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
structopt-derive = "0.2"
tls-api-stub = "0.1"
log = "0.4"
tokio = "0.1"
tokio-tungstenite = "0.5"
tungstenite = "0.5"
uuid = { version = "0.5", features = ["v4"] }
