[package]
name = "pathfinder"
version = "0.1.0"
authors = ["Valeryi Savich <relrin78@gmail.com>"]
repository = "https://github.com/OpenMatchmaking/pathfinder"
readme = "../README.md"
keywords = ["websocket", "rabbitmq", "proxy", "reverse-proxy", "open-matchmaking"]
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
amq-protocol = "1.0.0"
chrono = "0.4.6"
clap = "2.32.0"
config = "0.9.1"
failure = "0.1.5"
fern = { version = "0.5.6", features = ["colored"] }
futures = "0.1.25"
json = "0.11.13"
lapin-futures = "0.15.0"
lapin-futures-rustls = "0.17.1"
lapin-futures-tls-internal = "0.3.1"
lapin-futures-tls-api = "0.14.1"
structopt = "0.2.12"
structopt-derive = "0.2.12"
tls-api-stub = "0.1.20"
log = "0.4.5"
strum = "0.13.0"
strum_macros = "0.13.0"
tokio = "0.1.11"
tokio-io = "0.1.9"
tokio-tcp = "0.1.2"
tokio-tungstenite = "0.6.0"
tungstenite = "0.6.0"
uuid = { version = "0.7.1", features = ["v4"] }
